tests/miniJava/neg/000460_mutation.MiniJava
class java { public static void Main ( String [ ] java return { { } } }
